# robot_arms_teleop

./: .gitignore  README.md
media/: Test(1).gif:Zone.Identifier  Test.gif:Zone.Identifier  Testing Video.gif:Zone.Identifier
src/goal_pose_publisher/: package.xml  setup.cfg  setup.py
src/goal_pose_publisher/goal_pose_publisher/: goal_pose_publisher.py  landmark_publisher.py
src/goal_pose_publisher/launch/: goal_pose_publisher.launch.py  goal_publisher.launch.py
src/goal_pose_publisher/models/: pose_landmarker_full.task:Zone.Identifier  pose_landmarker_heavy.task:Zone.Identifier
src/motion_planning/: .setup_assistant  CMakeLists.txt  package.xml
src/motion_planning_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_moveit_config/: .setup_assistant  package.xml
src/robot_arm_model/: package.xml  setup.cfg  setup.py
src/robot_arm_model/launch/: model.launch.py
src/robot_arm_model/robot_arm_model/: state_publisher.py
src/robot_arm_model/rviz/: default.rviz
src/robot_arm_model/urdf/: panda.urdf  so101_new_calib.urdf  so101_new_calib_left.urdf  so101_new_calib_right.urdf
src/robot_arms_teleop_interfaces/: CMakeLists.txt  package.xml
src/robot_arms_teleop_launch/: package.xml  setup.cfg  setup.py
src/so101_new_calib_left_arm_ikfast_plugin/: CMakeLists.txt  package.xml  so101_new_calib_left_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
src/so101_new_calib_right_arm_ikfast_plugin/: CMakeLists.txt  package.xml  so101_new_calib_right_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
(+50 files in other folders)
